faet: add log streaming for stack deployment
