# docs/swagger.yaml
@@ -749,6 +749,41 @@ paths:
       summary: Get Stack Deployment
       tags:
       - Thanos Stack
+  /stacks/thanos/{id}/deployments/{deploymentId}/logs:
+    get:
+      consumes:
+      - application/json
+      description: Get logs for a deployment (paginated)
+      parameters:
+      - description: Thanos Stack ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Deployment ID
+        in: path
+        name: deploymentId
+        required: true
+        type: string
+      - default: 200
+        description: Max logs to return
+        in: query
+        name: limit
+        type: integer
+      - description: Return logs after this log id (exclusive)
+        in: query
+        name: afterId
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entities.Response'
+      summary: Get Deployment Logs
+      tags:
+      - Thanos Stack
   /stacks/thanos/{id}/deployments/{deploymentId}/status:
     get:
       consumes:
